============ Version 0.99.19

2004-10-13  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.99.19

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: upd
	* src/totem-disc.c: (cd_cache_new): fix a crash trying to play the disc
	as gnome_vfs_volume_monitor_unref() because the volume monitor isn't
	refcounted (Closes: #155195)

2004-10-12  Bastien Nocera  <hadess@hadess.net>

	* src/egg-recent-model.c: (egg_recent_model_add_full):
	* src/egg-recent-util.c: (load_icon_file),
	(egg_recent_util_get_icon): updated egg-recent from libegg

============ Version 0.99.18

2004-10-11  Bastien Nocera  <hadess@hadess.net>

	* NEWS: updated
	* configure.in: 0.99.18
	* src/totem-disc.c: (cd_cache_open_device): use err as we set it

2004-10-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-disc.c: (cd_cache_open_device), (cd_cache_disc_is_vcd),
	(cd_cache_disc_is_dvd): better error when no medium is found,
	fix a leak when the subdir can't be opened in the DVD detection,
	add VCD detection (Closes: #131814)

2004-10-11  Bastien Nocera  <hadess@hadess.net>

	* src/.cvsignore: updated

2004-10-11  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* data/totem.glade:
	  Remove open vcd/cdda/dvd entries, add open disc.
	* po/POTFILES.in:
	* src/Makefile.am:
	  Add totem-disc.[ch].
	* src/bacon-video-widget-gst.c: (bacon_video_widget_open),
	(bacon_video_widget_can_play), (bacon_video_widget_get_mrls),
	(bacon_video_widget_get_metadata_string):
	  Add discid for audio-CDs. Don't open the same media twice. This
	  is sort of a hack for something that I don't quite understand
	  in Totem just yet.
	* src/bacon-video-widget-xine.c: (bacon_video_widget_can_play),
	(bacon_video_widget_get_mrls):
	* src/bacon-video-widget.h:
	* src/disc-test.c: (main):
	* src/totem-disc.c: (get_device), (cd_cache_new),
	(cd_cache_open_device), (cd_cache_open_mountpoint),