@@ -1,3 +1,9 @@
+2004-10-13  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-disc.c: (cd_cache_disc_is_vcd), (cd_cache_disc_is_dvd):
+	Fix detection of DVDs without an AUDIO_TS directory (Closes: #155281),
+	speed up the sub-dir checking in the DVD and VCD cases
+
 ============ Version 0.99.19
 
 2004-10-13  Bastien Nocera  <hadess@hadess.net>
